feat: authorization middleware and swagger docs
